--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -35,7 +35,7 @@ status-website:
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Greenbaum Status
   introTitle: "**Upptime** status of Greenbaum Services"
-  introMessage: This is the status page for Greenbaum Services which uses **real-time** data from our [GitHub repository](https://github.com/greenbaum/upptime). No server required — just GitHub Actions, Issues, and Pages. Powered by [Upptime](https://upptime.js.org).
+  introMessage: This is the status page for Greenbaum Services which uses **real-time** data from our [GitHub repository](https://github.com/greenbaum/upptime) - just using GitHub Actions, Issues, and Pages with [Upptime](https://upptime.js.org).
   navbar:
     - title: Status
       href: /
