--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -2,6 +2,9 @@
 owner: greenbaum # Your GitHub username
 repo: upptime # Your GitHub repository name
 
+assignees:
+  - teutat3s
+
 # Add your sites here
 sites:
   - name: Greenbaum Mail
@@ -41,6 +44,7 @@ status-website:
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
+  theme: dark
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
