--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,6 +4,8 @@ repo: upptime # Your GitHub repository name
 
 assignees:
   - teutat3s
+  - totaljsde
+  - mikebaumgart
 
 # Add your sites here
 sites:
